# devtools

./: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/workflows/: build-release.yml
devtools-ui/: package.json
src/: app.css  app.rs  ffi.rs  global.d.ts  index.rs  macros.rs  main.rs  not_found.rs  routing.rs  style.scss  tools.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/Layout/: index.module.scss  index.tsx
src/context/: colourMode.ts
src/hooks/: useColourMode.ts  useTauri.ts
src/lib/: useColourMode.ts
src/pages/: _app.tsx  index.tsx
src/pages/tools/: base64-string-encode.tsx  js-compiler.tsx
src/styles/: Home.module.scss  style.scss
src/tools/: base64encode.rs
src/tools/base64encode/: mod.css  mod.rs
