[package]
name = "developer-tools-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = { version = "0.13.0", features = ["alloc"] }
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = "0.19"
yew-octicons = "0.3.1"
yew-router = "0.16.0"
yewprint = "0.3.0"
yewprint-css = "0.2.1"

[workspace]
members = ["src-tauri"]

[build-dependencies]
yewprint-css = "0.2.1"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization for size ( more aggressive )
# opt-level = 'z'
# optimization for size
opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
